c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_parse/struct_decl_empty_member_list.c
// struct member list cannot be empty
// (note that GCC/Clang allow this as an extenision)
struct s {};

int main(void) {
    return 0;
}